# google_adk

./: .gitignore  pyproject.toml
1_basic_agent/greeting_agent/: agent.py
2_tool_agent/tool_agent/: agent.py
3_litellm_agent/dad_joke_agent/: agent.py
4_structured_output/email_agent/: agent.py
5_sessions_and_memory/: basic_stateful_session.py
5_sessions_and_memory/question_answering_agent/: agent.py
6_persistent_storage/: main.py
7_multi_agent/manager/: agent.py
8_stateful_multi_agent/: main.py  utils.py
8_stateful_multi_agent/customer_service_agent/sub_agents/order_agent/: __init__.py
